# gtest_research

./: .bazelrc  .gitignore  BUILD.bazel  BUILD_INSTRUCTIONS.md  MODULE.bazel  README.md
docs/: links.md
fakeit/: BUILD.bazel
googletest/googlemock/include/gmock/: gmock-spec-builders.h
src/: BUILD.bazel  async_service.h
tests/: BUILD.bazel  test_async_problems.cpp  test_death_tests.cpp  test_gmock_api_problems.cpp  test_runtime_expectations.cpp
tests/fakeit/: BUILD.bazel  test_runtime_expectations.cpp
tests/gmock/: BUILD.bazel  test_death_tests.cpp  test_gmock_api_problems.cpp  test_runtime_expectations.cpp
tests/trompeloeil/: BUILD.bazel  test_runtime_expectations.cpp
