# --------------------------------------------------------------------------
# Тесты разделены по подпапкам:
#   gmock/        — оригинальные GMock-тесты
#   trompeloeil/  — аналогичные тесты на Trompeloeil
#   fakeit/       — аналоги на FakeIt
# --------------------------------------------------------------------------
# Примечание: test_runtime_expectations, test_death_tests и
# test_gmock_api_problems переехали в tests/gmock/ — используйте
# //tests/gmock:... для запуска этих тестов.
# --------------------------------------------------------------------------
_GMOCK_DEPS = [
    "//src:async_service",
    "@googletest//:gtest",
    "@googletest//:gtest_main",
]

cc_test(
    name = "test_async_problems",
    srcs = ["test_async_problems.cpp"],
    deps = _GMOCK_DEPS,
    linkopts = ["-pthread"],
)
