# --------------------------------------------------------------------------
# GMock-тесты (оригинальные)
# --------------------------------------------------------------------------
_GMOCK_DEPS = [
    "//src:async_service",
    "@googletest//:gtest",
    "@googletest//:gtest_main",
]

cc_test(
    name = "test_runtime_expectations",
    srcs = ["test_runtime_expectations.cpp"],
    deps = _GMOCK_DEPS,
    linkopts = ["-pthread"],
)

cc_test(
    name = "test_async_problems",
    srcs = ["test_async_problems.cpp"],
    deps = _GMOCK_DEPS,
    linkopts = ["-pthread"],
)

cc_test(
    name = "test_death_tests",
    srcs = ["test_death_tests.cpp"],
    deps = _GMOCK_DEPS,
    linkopts = ["-pthread"],
)

cc_test(
    name = "test_gmock_api_problems",
    srcs = ["test_gmock_api_problems.cpp"],
    deps = _GMOCK_DEPS,
    linkopts = ["-pthread"],
)
